--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GeraData AI - Consultoria em IA Generativa</title>
   <style>
+
+    <!-- Botão de WhatsApp -->
+<a
+  href="https://api.whatsapp.com/send?phone=5519989963385&text=Ol%C3%A1%2C+gostaria+de+saber+mais+sobre+os+servi%C3%A7os+de+consultoria+em+IA+Generativa."
+  class="whatsapp-button"
+  target="_blank"
+  title="Fale conosco no WhatsApp"
+>
+  💬
+</a>
+
+<style>
+  .whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366;
+    color: white;
+    font-size: 2rem;
+    padding: 10px 16px;
+    border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+  }
+
+  .whatsapp-button:hover {
+    background-color: #128c7e;
+  }
+</style>
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
