--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <section class="contact">
       <h2>Entre em Contato</h2>
-      <form action="https://formspree.io/f/xqkrlldl" method="POST">
+      <form action="https://formspree.io/f/xnnplapw" method="POST">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required />
 
