--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GeraData AI - IA Generativa para Negócios</title>
 
-  <!-- Google tag (gtag.js) -->
+  <!-- SEO Essentials -->
+  <title>GeraData AI - Consultoria em IA Generativa para Empresas</title>
+  <meta name="description" content="Consultoria estratégica em Inteligência Artificial Generativa para empresas. Converse com seus dados usando Agentes Inteligentes.">
+  <meta name="keywords" content="IA Generativa, Inteligência Artificial, ChatGPT, consultoria IA, agentes de IA, IA para empresas, GeraData AI, GPT para negócios, copilotos corporativos">
+  <meta name="author" content="GeraData AI">
+  <meta name="robots" content="index, follow">
+
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1H5941RSK"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -14,7 +20,10 @@
     gtag('config', 'G-G1H5941RSK');
   </script>
 
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
   <style>
     body {
       font-family: 'Inter', sans-serif;
