--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
   <meta name="author" content="GeraData AI">
   <meta name="robots" content="index, follow">
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="GeraData AI - Consultoria em IA Generativa para Empresas" />
+  <meta property="og:description" content="Transforme sua empresa com agentes de IA generativa que conversam com seus dados." />
+  <meta property="og:image" content="https://yourdomain.com/imagem-preview.jpg" />
+  <meta property="og:url" content="https://icolonia77.github.io/geradata-ai-site" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="GeraData AI - Consultoria em IA Generativa" />
+  <meta name="twitter:description" content="Agentes de IA que entendem e respondem seus dados. Inove com inteligência." />
+  <meta name="twitter:image" content="https://yourdomain.com/imagem-preview.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://yourdomain.com/favicon.ico" type="image/x-icon" />
+
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1H5941RSK"></script>
   <script>
@@ -33,64 +49,52 @@
       color: #111827;
       line-height: 1.6;
     }
-
     header {
       background-color: #1f2937;
       color: white;
       padding: 3rem 2rem;
       text-align: center;
     }
-
     header h1 {
       font-size: 3rem;
       margin-bottom: 0.5rem;
     }
-
     header p {
       font-size: 1.25rem;
       opacity: 0.9;
     }
-
     main {
       padding: 2rem;
       max-width: 900px;
       margin: 0 auto;
     }
-
     section {
       margin-bottom: 3rem;
     }
-
     h2 {
       color: #1f2937;
       font-size: 1.75rem;
       margin-bottom: 0.75rem;
     }
-
     ul {
       padding-left: 1.2rem;
     }
-
     li {
       margin-bottom: 0.5rem;
     }
-
     .highlight {
       font-weight: 600;
       color: #2563eb;
     }
-
     .contact {
       background-color: #f3f4f6;
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
-
     label {
       font-weight: 500;
     }
-
     input[type="text"],
     input[type="email"],
     textarea {
@@ -104,7 +108,6 @@
       font-size: 1rem;
       background-color: white;
     }
-
     button[type="submit"] {
       background-color: #2563eb;
       color: white;
@@ -115,11 +118,9 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
     button[type="submit"]:hover {
       background-color: #1d4ed8;
     }
-
     footer {
       background-color: #1f2937;
       color: white;
@@ -128,7 +129,6 @@
       font-size: 0.95rem;
       margin-top: 4rem;
     }
-
     .whatsapp-button {
       position: fixed;
       bottom: 20px;
@@ -143,7 +143,6 @@
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
       z-index: 1000;
     }
-
     .whatsapp-button:hover {
       background-color: #128c7e;
     }
@@ -191,16 +190,26 @@
         <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
 
         <button type="submit">Enviar</button>
+
+        <script>
+          document.querySelector("form").addEventListener("submit", function () {
+            gtag('event', 'envio_formulario', {
+              event_category: 'Contato',
+              event_label: 'Formulário de Contato'
+            });
+          });
+        </script>
       </form>
     </section>
   </main>
 
-  <!-- Botão de WhatsApp -->
+  <!-- Botão de WhatsApp com rastreamento -->
   <a
     href="https://api.whatsapp.com/send?phone=5519989963385&text=Ol%C3%A1%2C+gostaria+de+saber+mais+sobre+os+servi%C3%A7os+de+consultoria+em+IA+Generativa."
     class="whatsapp-button"
     target="_blank"
     title="Fale conosco no WhatsApp"
+    onclick="gtag('event', 'click_whatsapp', { event_category: 'Contato', event_label: 'Botão WhatsApp' });"
   >
     💬
   </a>
