--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="GeraData AI - Consultoria em IA Generativa para Empresas" />
   <meta property="og:description" content="Transforme sua empresa com agentes de IA generativa que conversam com seus dados." />
-  <meta property="og:image" content="https://icolonia77.github.io/geradata-ai-site/imagem-preview.jpg" />
+  <meta property="og:image" content="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" />
   <meta property="og:url" content="https://icolonia77.github.io/geradata-ai-site" />
   <meta property="og:type" content="website" />
 
@@ -22,7 +22,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="GeraData AI - Consultoria em IA Generativa" />
   <meta name="twitter:description" content="Agentes de IA que entendem e respondem seus dados. Inove com inteligência." />
-  <meta name="twitter:image" content="https://icolonia77.github.io/geradata-ai-site/imagem-preview.jpg" />
+  <meta name="twitter:image" content="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" />
 
   <!-- Favicon -->
   <link rel="icon" href="https://icolonia77.github.io/geradata-ai-site/favicon.ico" type="image/x-icon" />
