--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
     header {
       background-color: #1f2937;
       color: white;
-      padding: 3rem 2rem;
+      padding: 2rem;
       text-align: center;
     }
+    header img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 1rem;
+    }
     header h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
     header p {
@@ -148,3 +153,11 @@
     }
   </style>
 </head>
+<body>
+  <header>
+    <img src="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" alt="Logo GeraData AI">
+    <h1>GeraData AI</h1>
+    <p>Consultoria Estratégica em Inteligência Artificial Generativa</p>
+  </header>
+</body>
+</html>
