--- a/index.html
+++ b/index.html
@@ -4,30 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- SEO Essentials -->
   <title>GeraData AI - Consultoria em IA Generativa para Empresas</title>
   <meta name="description" content="Consultoria estratégica em Inteligência Artificial Generativa para empresas. Converse com seus dados usando Agentes Inteligentes.">
   <meta name="keywords" content="IA Generativa, Inteligência Artificial, ChatGPT, consultoria IA, agentes de IA, IA para empresas, GeraData AI, GPT para negócios, copilotos corporativos">
   <meta name="author" content="GeraData AI">
   <meta name="robots" content="index, follow">
 
-  <!-- Open Graph -->
   <meta property="og:title" content="GeraData AI - Consultoria em IA Generativa para Empresas" />
   <meta property="og:description" content="Transforme sua empresa com agentes de IA generativa que conversam com seus dados." />
   <meta property="og:image" content="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" />
   <meta property="og:url" content="https://icolonia77.github.io/geradata-ai-site" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="GeraData AI - Consultoria em IA Generativa" />
   <meta name="twitter:description" content="Agentes de IA que entendem e respondem seus dados. Inove com inteligência." />
   <meta name="twitter:image" content="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" />
 
-  <!-- Favicon -->
   <link rel="icon" href="https://icolonia77.github.io/geradata-ai-site/favicon.ico" type="image/x-icon" />
 
-  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1H5941RSK"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -36,10 +31,8 @@
     gtag('config', 'G-G1H5941RSK');
   </script>
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-  <!-- Styles -->
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -47,7 +40,6 @@
       padding: 0;
       background: #f9fafb;
       color: #111827;
-      line-height: 1.6;
     }
     header {
       background-color: #1f2937;
@@ -56,83 +48,30 @@
       text-align: center;
     }
     header img {
-      max-width: 100%;
+      max-width: 200px;
       height: auto;
       margin-bottom: 1rem;
-    }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      font-size: 1.25rem;
-      opacity: 0.9;
     }
     main {
       padding: 2rem;
       max-width: 900px;
       margin: 0 auto;
     }
-    section {
-      margin-bottom: 3rem;
-    }
     h2 {
       color: #1f2937;
-      font-size: 1.75rem;
-      margin-bottom: 0.75rem;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    li {
-      margin-bottom: 0.5rem;
-    }
-    .highlight {
-      font-weight: 600;
-      color: #2563eb;
+      margin-bottom: 1rem;
     }
     .contact {
-      background-color: #f3f4f6;
-      padding: 2rem;
+      background: #f3f4f6;
+      padding: 1.5rem;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
-    label {
-      font-weight: 500;
-    }
-    input[type="text"],
-    input[type="email"],
-    textarea {
-      width: 100%;
-      padding: 12px;
-      margin-top: 4px;
-      margin-bottom: 16px;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
-      box-sizing: border-box;
-      font-size: 1rem;
-      background-color: white;
-    }
-    button[type="submit"] {
-      background-color: #2563eb;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    button[type="submit"]:hover {
-      background-color: #1d4ed8;
     }
     footer {
       background-color: #1f2937;
       color: white;
       text-align: center;
       padding: 2rem;
-      font-size: 0.95rem;
-      margin-top: 4rem;
+      margin-top: 3rem;
     }
     .whatsapp-button {
       position: fixed;
@@ -143,21 +82,53 @@
       font-size: 2rem;
       padding: 12px 16px;
       border-radius: 50%;
-      text-align: center;
       text-decoration: none;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
       z-index: 1000;
-    }
-    .whatsapp-button:hover {
-      background-color: #128c7e;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" alt="Logo GeraData AI">
+    <img src="https://icolonia77.github.io/geradata-ai-site/imagem-preview.png" alt="GeraData AI">
     <h1>GeraData AI</h1>
     <p>Consultoria Estratégica em Inteligência Artificial Generativa</p>
   </header>
+
+  <main>
+    <section>
+      <h2>Sobre Nós</h2>
+      <p>Com mais de <strong>30 anos de experiência</strong> em ciência de dados e tecnologias emergentes, oferecemos uma consultoria especializada para a implementação de <strong>IA Generativa</strong> nas empresas.</p>
+      <p>Capacitamos organizações a <strong>conversar naturalmente com seus dados</strong> por meio de agentes inteligentes personalizados.</p>
+    </section>
+
+    <section>
+      <h2>Nossos Serviços</h2>
+      <ul>
+        <li>Mapeamento de oportunidades de uso de IA Generativa</li>
+        <li>Desenvolvimento de agentes inteligentes conectados aos dados</li>
+        <li>Criação de copilotos para áreas de negócio</li>
+        <li>Treinamento e capacitação de equipes</li>
+        <li>Governança e segurança em IA Generativa</li>
+      </ul>
+    </section>
+
+    <section class="contact">
+      <h2>Entre em Contato</h2>
+      <p><strong>Celular:</strong> (19) 98996-3385</p>
+      <p><strong>E-mail:</strong> <a href="mailto:coloniaster@gmail.com">coloniaster@gmail.com</a></p>
+      <p>Ou envie uma mensagem diretamente pelo botão de WhatsApp no canto da tela.</p>
+    </section>
+  </main>
+
+  <a
+    href="https://api.whatsapp.com/send?phone=5519989963385&text=Ol%C3%A1%2C+gostaria+de+saber+mais+sobre+os+servi%C3%A7os+de+consultoria+em+IA+Generativa."
+    class="whatsapp-button"
+    target="_blank"
+    title="Fale conosco pelo WhatsApp"
+  >💬</a>
+
+  <footer>
+    <p>&copy; 2025 GeraData AI. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
