--- a/index.html
+++ b/index.html
@@ -145,16 +145,15 @@
       <h2>Entre em Contato</h2>
       <p><strong>Celular:</strong> (19) 98996-3385</p>
       <p><strong>E-mail:</strong> <a href="mailto:coloniaster@gmail.com">coloniaster@gmail.com</a></p>
-      <p>Ou envie sua mensagem diretamente usando o formulário abaixo:</p>
-
+      <p>Ou envie sua mensagem diretamente pelo formulário abaixo:</p>
       <form action="https://formspree.io/f/xnnplapw" method="POST">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" required>
+        <label for="name">Nome</label>
+        <input type="text" id="name" name="name" required />
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="email" required />
 
-        <label for="message">Mensagem:</label>
+        <label for="message">Mensagem</label>
         <textarea id="message" name="message" rows="5" required></textarea>
 
         <button type="submit">Enviar Mensagem</button>
