--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
     gtag('config', 'G-G1H5941RSK');
   </script>
 
+  <!-- Form success handler -->
+  <script>
+    window.addEventListener("DOMContentLoaded", function () {
+      const form = document.querySelector("form");
+      if (form) {
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          const data = new FormData(form);
+          fetch(form.action, {
+            method: form.method,
+            body: data,
+            headers: {
+              'Accept': 'application/json'
+            }
+          }).then(response => {
+            if (response.ok) {
+              alert("Mensagem enviada com sucesso! Obrigado pelo contato.");
+              form.reset();
+            } else {
+              alert("Erro ao enviar. Tente novamente mais tarde.");
+            }
+          });
+        });
+      }
+    });
+  </script>
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -148,13 +175,13 @@
       <p>Ou envie sua mensagem diretamente pelo formulário abaixo:</p>
       <form action="https://formspree.io/f/xnnplapw" method="POST">
         <label for="name">Nome</label>
-        <input type="text" id="name" name="name" required />
+        <input type="text" id="name" name="name" required minlength="3" />
 
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email" required />
 
         <label for="message">Mensagem</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+        <textarea id="message" name="message" rows="5" required minlength="10"></textarea>
 
         <button type="submit">Enviar Mensagem</button>
       </form>
